examples/test/testpolicy3985.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3985
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key3: value6
      key41: value31
      key2: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value46
          key1: value12
          key16: value37
      podSelector:
        matchLabels:
          key15: value23
